feat: Added simple dynamic routing; feat: Added svg for language-changer; feat: Added images for main page;

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1,3 +1,11 @@
 {
-  "welcome": "Welcome"
+  "welcome"   : "Welcome",
+  "locale"    : "en",
+    "home"      : "Main",
+    "about"     : "About",
+    "team"      : "Team",
+    "blog"      : "Blog",
+    "vas"       : "Highest Court",
+    "smi"       : "Mass media",
+    "contacts"  : "Сontacts"
 }
