--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -1,3 +1,11 @@
 {
-  "welcome": "Добро пожаловать"
+  "welcome"   : "Добро пожаловать",
+  "locale"    : "ru",
+    "home"      : "Главная",
+    "about"     : "О компании",
+    "team"      : "Команда",
+    "blog"      : "Блог",
+    "vas"       : "Высший арбитражный суд",
+    "smi"       : "СМИ о нас",
+    "contacts"  : "Контакты"
 }
