--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -1,3 +1,11 @@
 {
-  "welcome": "dobro pojalovat`"
+  "welcome"   : "Ласкаво просимо",
+  "locale"    : "ua",
+    "home"      : "Головна",
+    "about"     : "Про компанію",
+    "team"      : "Команда",
+    "blog"      : "Блог",
+    "vas"       : "Вищий арбітражний суд",
+    "smi"       : "ЗМІ про нас",
+    "contacts"  : "Контакти"
 }
