feat: docker returned to simple variant; feat: run scripts and supervizord; feat: new key-word in locales; feat: templates include bootstrap as cdn; feat: lang buttons changed to modal window; fix: storage premissions;

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -7,5 +7,6 @@
     "blog"      : "Blog",
     "vas"       : "Highest Court",
     "smi"       : "Mass media",
-    "contacts"  : "Сontacts"
+    "contacts"  : "Сontacts",
+  "chse_yur_lang" : "Select your language"
 }
