--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -7,5 +7,7 @@
     "blog"      : "Блог",
     "vas"       : "Высший арбитражный суд",
     "smi"       : "СМИ о нас",
-    "contacts"  : "Контакты"
+    "contacts"  : "Контакты",
+  "chse_yur_lang" : "Выберете ваш язык"
+
 }
