--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -7,5 +7,6 @@
     "blog"      : "Блог",
     "vas"       : "Вищий арбітражний суд",
     "smi"       : "ЗМІ про нас",
-    "contacts"  : "Контакти"
+    "contacts"  : "Контакти",
+  "chse_yur_lang" : "Виберіть Мову"
 }
